# Watermarking-Rust

./: Cargo.toml  README.md  build.rs  icon.xcf
src/: algo.rs  main.rs  outils.rs
src/ressources/: watermarking.gresource.xml
