[package]
name = "watermarking"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
opt-level = 3

[dependencies]
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"] }
